--- a/table.html
+++ b/table.html
@@ -11,6 +11,16 @@
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+  <!-- Start Header -->
+  <header>
+    <nav>
+      <a href="index.html"">Home</a>
+      <a href="mailto:jiayu1551@gmail.com">Contact</a>
+      <a href="https://github.com/jesswu1551">GitHub</a>
+    </nav>
+  </header>
+  <!-- End Header-->
+
   <!-- Start Table1 -->
   <div>
     <table id="t01">
@@ -193,6 +203,8 @@
     </table>
     <!-- End Table3 -->
   </div>
+
+  <a id="home" href="index.html"> ❮ Home</a>
 
 </body>
 </html>
