--- a/tag.html
+++ b/tag.html
@@ -24,8 +24,8 @@
 
   <!-- Start Content -->
   <div>
-    <table style="border-collapse: collapse;margin: 40px;">
-      <tr style="background-color:#d3d3d3;">
+    <table id="tag_table">
+      <tr id="tag_table_tr">
         <th>Tag</th>
         <th>Description</th>
         <th>Demonstration</th>
