add home button

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Jess Wu">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Web Practice</title>
+  <title>Web Practice | About</title>
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body id="about">
