--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
     <div>Practice 2
       <span><a href="table.html">Table</a></span>
     </div>
+    <div>Practice 3
+      <span><a href="tag.html">Tag</a></span>
+    </div>
   </section>
   <!-- End List Section-->
 
