--- a/table.html
+++ b/table.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Jess Wu">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Practice 2 Table</title>
+  <title>Web Practice | Table</title>
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
   <!-- End Header-->
 
   <!-- Start Table1 -->
-  <div>
+  <div  class="html-width">
     <table id="t01">
       <tr>
         <th rowspan="2"></th>
