--- a/tag.html
+++ b/tag.html
@@ -23,7 +23,7 @@
   <!-- End Header -->
 
   <!-- Start Content -->
-  <div>
+  <div class="html-width">
     <table id="tag_table">
       <tr id="tag_table_tr">
         <th>Tag</th>
@@ -130,6 +130,8 @@
     </table>
   </div>
   <!-- Start Content -->
+
+  <a id="home" href="index.html"> ❮ Home</a>
 
 </body>
 </html>
