edit index topic order

--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
   <!-- Start Marquee Section-->
   <section id="marquee_container">
     <p>Today's Topic</p>
-    <a href="table.html">Table</a>
+    <a href="tag.html">Tag</a>
   </section>
   <!-- End Marquee Section-->
 
   <!-- Start List Section-->
   <section id="list_container">
-    <div>Practice 1
-      <span><a href="index.html">Homepage</a></span>
+    <div>Practice 3
+      <span><a href="tag.html">Tag</a></span>
     </div>
     <div>Practice 2
       <span><a href="table.html">Table</a></span>
     </div>
-    <div>Practice 3
-      <span><a href="tag.html">Tag</a></span>
+    <div>Practice 1
+      <span><a href="index.html">Homepage</a></span>
     </div>
   </section>
   <!-- End List Section-->
