--- a/table/table.html
+++ b/table/table.html
@@ -8,14 +8,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Web Practice | Table</title>
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="table.css">
 </head>
 <body>
 
   <!-- Start Header -->
   <header>
     <nav>
-      <a href="index.html"">Home</a>
+      <a href="../index.html"">Home</a>
       <a href="mailto:jiayu1551@gmail.com">Contact</a>
       <a href="https://github.com/jesswu1551">GitHub</a>
     </nav>
@@ -204,7 +204,7 @@
     <!-- End Table3 -->
   </div>
 
-  <a id="home" href="index.html"> ❮ Home</a>
+  <a id="home-btn" href="../index.html"> ❮ Home</a>
 
 </body>
 </html>
