--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
   <!-- Start Marquee Section-->
   <section id="marquee_container">
     <p>Today's Topic</p>
-    <a href="tag.html">Tag</a>
+    <a href="tag/tag.html">Tag</a>
   </section>
   <!-- End Marquee Section-->
 
   <!-- Start List Section-->
   <section id="list_container">
     <div>Practice 3
-      <span><a href="tag.html">Tag</a></span>
+      <span><a href="tag/tag.html">Tag</a></span>
     </div>
     <div>Practice 2
-      <span><a href="table.html">Table</a></span>
+      <span><a href="table/table.html">Table</a></span>
     </div>
     <div>Practice 1
       <span><a href="index.html">Homepage</a></span>
