add recursive color

--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
   <!-- Start Marquee Section-->
   <section id="marquee_container">
     <p>Today's Topic</p>
-    <a href="tag/tag.html">Tag</a>
+    <a href="recursive_color/recursive_color.html">Recursive Color</a>
   </section>
   <!-- End Marquee Section-->
 
   <!-- Start List Section-->
   <section id="list_container">
+    <div>Practice 4
+      <span><a href="recursive_color/recursive_color.html">Recursive Color</a></span>
+    </div>
     <div>Practice 3
       <span><a href="tag/tag.html">Tag</a></span>
     </div>
