add html structure

--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
   <!-- Start Marquee Section-->
   <section id="marquee_container">
     <p>Today's Topic</p>
-    <a href="recursive_color/recursive_color.html">Recursive Color</a>
+    <a href="html_structure/html_structure.html">Html Structure</a>
   </section>
   <!-- End Marquee Section-->
 
   <!-- Start List Section-->
   <section id="list_container">
+    <div>Practice 5
+      <span><a href="html_structure/html_structure.html">Html Structure</a></span>
+    </div>
     <div>Practice 4
       <span><a href="recursive_color/recursive_color.html">Recursive Color</a></span>
     </div>
