add practice 6, make a deal

--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
   <!-- Start Marquee Section-->
   <section id="marquee_container">
     <p>Today's Topic</p>
-    <a href="html_structure/html_structure.html">Html Structure</a>
+    <a href="make_a_deal/make_a_deal.html">Make a Deal</a>
   </section>
   <!-- End Marquee Section-->
 
   <!-- Start List Section-->
   <section id="list_container">
+    <div>Practice 6
+      <span><a href="make_a_deal/make_a_deal.html">Make a Deal</a></span>
+    </div>
     <div>Practice 5
       <span><a href="html_structure/html_structure.html">Html Structure</a></span>
     </div>
