edit code style

--- a/make_a_deal/make_a_deal_final2.html
+++ b/make_a_deal/make_a_deal_final2.html
@@ -21,7 +21,8 @@
     </nav>
   </header>
   <!-- End Header -->
-  <div style="margin:40px auto;max-width: 768px;text-align: center;">
+
+  <div class="html-wd">
     <section>
       <h1>YOU LOSE!</h1>
       <div>Well that sucks. Here is your BAD THING!</div>
@@ -33,6 +34,7 @@
 
     <a id="home-btn" href="make_a_deal.html">Try Again</a>
 
-    </div>
+  </div>
+
 </body>
 </html>
