--- a/make_a_deal/make_a_deal_final3.html
+++ b/make_a_deal/make_a_deal_final3.html
@@ -21,7 +21,8 @@
     </nav>
   </header>
   <!-- End Header -->
-  <div style="margin:40px auto;max-width: 768px;text-align: center;">
+
+  <div class="html-wd">
     <section>
       <h1>YOU WIN!</h1>
       <div>Booyah! Here is your AWESOME THING!</div>
