--- a/make_a_deal/make_a_deal.html
+++ b/make_a_deal/make_a_deal.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Web Practice">
@@ -11,7 +10,6 @@
   <title>Web Practice | Make a Deal</title>
   <link rel="stylesheet" href="make_a_deal.css">
 </head>
-
 <body>
 
   <!-- Start Header -->
@@ -23,34 +21,36 @@
     </nav>
   </header>
   <!-- End Header -->
-<div style="margin:40px auto;max-width: 768px;text-align: center;">
-  <section>
-    <h1>Wanna Make a Deal?</h1>
-    <div>There are three doors. Behind two doors there are BAD THINGS.<br>
-    Behind one door is an AWESOME THING.<br>
-    Choose a door...</div>
-  </section>
 
-  <section style="margin: 40px;">
-    <div style="display: inline-block;margin: 0 40px;">
-      <a href="make_a_deal_choose1.html">
-        <img src="images/blue_door.png">
-      </a>
-    </div>
-    <div style="display: inline-block;margin: 0 40px;">
-      <a href="make_a_deal_choose2.html">
-        <img src="images/orange_door.png">
-      </a>
-    </div>
-    <div style="display: inline-block;margin: 0 40px;">
-      <a href="make_a_deal_choose3.html">
-        <img src="images/green_door.png">
-      </a>
-    </div>
-  </section>
+  <div style="margin:40px auto;max-width: 768px;text-align: center;">
+    <section>
+      <h1>Wanna Make a Deal?</h1>
+      <div>There are three doors. Behind two doors there are BAD THINGS.<br>
+      Behind one door is an AWESOME THING.<br>
+      Choose a door...</div>
+    </section>
 
-  <a id="home-btn" href="../index.html"> ❮ Home</a>
+    <section>
+      <div class="block-mr">
+        <a href="make_a_deal_choose1.html">
+          <img src="images/blue_door.png">
+        </a>
+      </div>
+      <div class="block-mr">
+        <a href="make_a_deal_choose2.html">
+          <img src="images/orange_door.png">
+        </a>
+      </div>
+      <div class="block-mr">
+        <a href="make_a_deal_choose3.html">
+          <img src="images/green_door.png">
+        </a>
+      </div>
+    </section>
 
-</div>
+    <a id="home-btn" href="../index.html"> ❮ Home</a>
+
+  </div>
+
 </body>
 </html>
