--- a/make_a_deal/make_a_deal_choose1.html
+++ b/make_a_deal/make_a_deal_choose1.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Web Practice">
@@ -11,7 +10,6 @@
   <title>Web Practice | Make a Deal</title>
   <link rel="stylesheet" href="make_a_deal.css">
 </head>
-
 <body>
 
   <!-- Start Header -->
@@ -23,7 +21,8 @@
     </nav>
   </header>
   <!-- End Header -->
-  <div style="margin:40px auto;max-width: 768px;text-align: center;">
+
+  <div class="html-wd">
     <section>
       <h1>You Picked the Blue Door!</h1>
       <div>I opened the Orange Door which held a BAD THING.<br>
@@ -31,16 +30,16 @@
       or you can keep your first choice and open the Blue Door.</div>
     </section>
 
-    <section style="margin: 40px;">
-      <div style="display: inline-block;margin: 0 40px;">
+    <section>
+      <div class="block-mr">
         <a href="make_a_deal_final1.html">
           <img src="images/blue_door.png">
         </a>
       </div>
-      <div style="display: inline-block;margin: 0 40px;">
+      <div class="block-mr">
           <img src="images/orange_door_open.png">
       </div>
-      <div style="display: inline-block;margin: 0 40px;">
+      <div class="block-mr">
         <a href="make_a_deal_final3.html">
           <img src="images/green_door.png">
         </a>
