--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
   <!-- Start Marquee Section-->
   <section id="marquee_container">
     <p>Today's Topic</p>
-    <a href="make_a_deal/make_a_deal.html">Make a Deal</a>
+    <a href="form/form.html">Quiz Form</a>
   </section>
   <!-- End Marquee Section-->
 
   <!-- Start List Section-->
   <section id="list_container">
+    <div>Practice 7
+      <span><a href="form/form.html">Quiz Form</a></span>
+    </div>
     <div>Practice 6
       <span><a href="make_a_deal/make_a_deal.html">Make a Deal</a></span>
     </div>
