modify css code style

--- a/form/form.html
+++ b/form/form.html
@@ -159,8 +159,8 @@
         </div>
       </div>
       <div style="text-align: center;">
-        <a id="home-btn" href="../index.html"> ❮ Home</a>
-        <input id="sub-btn" type="submit" value="Submit ❯">
+        <a class="home-btn" id="home-btn" href="../index.html"> ❮ Home</a>
+        <input class="sub-btn" id="sub-btn" type="submit" value="Submit ❯">
       </div>
     </form>
   </div>
