--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     <h1>Web Practice</h1>
     <div id="info_container">
       <div>Hello, I'm Jess.</div>
-      <div class="blue">2020</div>
+      <div class="color">2020</div>
       <div>Start my web practice</div>
     </div>
   </section>
   <!-- End Top Section -->
 
   <!-- Start Marquee Section-->
-  <section id="marquee_container">
+  <section id="mid_container">
     <p>Today's Topic</p>
     <a href="form/form.html">Quiz Form</a>
   </section>
