edit code style

--- a/html_structure/html_structure.html
+++ b/html_structure/html_structure.html
@@ -16,8 +16,8 @@
   <!-- Start Header -->
   <header>
     <nav>
-      <a href="../index.html"">Home</a>
-      <a href=" mailto:jiayu1551@gmail.com">Contact</a>
+      <a href="../index.html">Home</a>
+      <a href="mailto:jiayu1551@gmail.com">Contact</a>
       <a href="https://github.com/jesswu1551">GitHub</a>
     </nav>
   </header>
