--- a/table/table.html
+++ b/table/table.html
@@ -15,7 +15,7 @@
   <!-- Start Header -->
   <header>
     <nav>
-      <a href="../index.html"">Home</a>
+      <a href="../index.html">Home</a>
       <a href="mailto:jiayu1551@gmail.com">Contact</a>
       <a href="https://github.com/jesswu1551">GitHub</a>
     </nav>
@@ -23,7 +23,7 @@
   <!-- End Header-->
 
   <!-- Start Table1 -->
-  <div  class="html-width">
+  <div class="html-width">
     <table id="t01">
       <tr>
         <th rowspan="2"></th>
