--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
   <!-- Start Header -->
   <header>
     <nav>
-      <a href="index.html"">Home</a>
+      <a href="index.html">Home</a>
       <a href="mailto:jiayu1551@gmail.com">Contact</a>
       <a href="https://github.com/jesswu1551">GitHub</a>
     </nav>
