--- a/recursive_color/recursive_color.html
+++ b/recursive_color/recursive_color.html
@@ -16,8 +16,8 @@
   <!-- Start Header -->
   <header>
     <nav>
-      <a href="../index.html"">Home</a>
-      <a href=" mailto:jiayu1551@gmail.com">Contact</a>
+      <a href="../index.html">Home</a>
+      <a href="mailto:jiayu1551@gmail.com">Contact</a>
       <a href="https://github.com/jesswu1551">GitHub</a>
     </nav>
   </header>
