--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
   <!-- Start Marquee Section-->
   <section id="mid_container">
     <p>Today's Topic</p>
-    <a href="form/form.html">Quiz Form</a>
+    <a href="data_table/data_table.html">Data Table</a>
   </section>
   <!-- End Marquee Section-->
 
   <!-- Start List Section-->
   <section id="list_container">
+    <div>Practice 8
+      <span><a href="data_table/data_table.html">Date Table</a></span>
+    </div>
     <div>Practice 7
       <span><a href="form/form.html">Quiz Form</a></span>
     </div>
