edit icon.html favicon

--- a/icon/icon.html
+++ b/icon/icon.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Web Practice">
@@ -9,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Web Practice | Icons</title>
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="icon.css">
   <script src="https://kit.fontawesome.com/cb2e39f35d.js" crossorigin="anonymous"></script>
 </head>
