--- a/icon/icon.html
+++ b/icon/icon.html
@@ -26,86 +26,129 @@
 
   <section>
     <div class="col">
-      <div class="col-icon"><i class="fab fa-500px fa-3x"></i></div>
-      <div class="col-text"><span>500px</span></div>
+      <div class="icon-top"><i class="fab fa-500px fa-3x"></i></div>
+      <div class="icon-text"><span>500px</span></div>
     </div>
     <div class="col">
-      <div class="col-icon"><i class="fab fa-accessible-icon fa-3x"></i></i></div>
-      <div class="col-text"><span>accessible</span></div>
+      <div class="icon-top"><i class="fab fa-accessible-icon fa-3x"></i></i></div>
+      <div class="icon-text"><span>accessible</span></div>
     </div>
     <div class="col">
-      <div class="col-icon"><i class="fab fa-accusoft fa-3x"></i></div>
-      <div class="col-text"><span>accusoft</span></div>
+      <div class="icon-top"><i class="fab fa-accusoft fa-3x"></i></div>
+      <div class="icon-text"><span>accusoft</span></div>
     </div>
     <div class="col">
-      <div class="col-icon"><i class="fab fa-acquisitions-incorporated fa-3x"></i></div>
-      <div class="col-text"><span>acquisitions-incorporated</span></div>
+      <div class="icon-top"><i class="fab fa-acquisitions-incorporated fa-3x"></i></div>
+      <div class="icon-text"><span>acquisitions-incorporated</span></div>
     </div>
     <div class="col">
-      <div class="col-icon"><i class="fas fa-ad fa-3x"></i></div>
-      <div class="col-text"><span>ad</span></div>
+      <div class="icon-top"><i class="fas fa-ad fa-3x"></i></div>
+      <div class="icon-text"><span>ad</span></div>
     </div>
     <div class="col">
-      <div class="col-icon"><i class="fas fa-address-book fa-3x"></i></div>
-      <div class="col-text"><span>address-book</span></div>
+      <div class="icon-top"><i class="fas fa-address-book fa-3x"></i></div>
+      <div class="icon-text"><span>address-book</span></div>
     </div>
     <div class="col">
-      <div class="col-icon"><i class="far fa-address-book fa-3x"></i></div>
-      <div class="col-text"><span>address-book</span></div>
+      <div class="icon-top"><i class="far fa-address-book fa-3x"></i></div>
+      <div class="icon-text"><span>address-book</span></div>
     </div>
     <div class="col">
-      <div class="col-icon"><i class="fas fa-address-card fa-3x"></i></div>
-      <div class="col-text"><span>address-card</span></div>
+      <div class="icon-top"><i class="fas fa-address-card fa-3x"></i></div>
+      <div class="icon-text"><span>address-card</span></div>
     </div>
     <div class="col">
-      <div class="col-icon"><i class="far fa-address-card fa-3x"></i></div>
-      <div class="col-text"><span>address-card</span></div>
+      <div class="icon-top"><i class="far fa-address-card fa-3x"></i></div>
+      <div class="icon-text"><span>address-card</span></div>
     </div>
     <div class="col">
-      <div class="col-icon"><i class="fas fa-adjust fa-3x"></i></div>
-      <div class="col-text"><span>adjust</span></div>
+      <div class="icon-top"><i class="fas fa-adjust fa-3x"></i></div>
+      <div class="icon-text"><span>adjust</span></div>
     </div>
     <div class="col">
-      <div class="col-icon"><i class="fab fa-adn fa-3x"></i></i></div>
-      <div class="col-text"><span>adn</span></div>
+      <div class="icon-top"><i class="fab fa-adn fa-3x"></i></i></div>
+      <div class="icon-text"><span>adn</span></div>
     </div>
     <div class="col">
-      <div class="col-icon"><i class="fab fa-adobe fa-3x"></i></div>
-      <div class="col-text"><span>adobe</span></div>
+      <div class="icon-top"><i class="fab fa-adobe fa-3x"></i></div>
+      <div class="icon-text"><span>adobe</span></div>
     </div>
     <div class="col">
-      <div class="col-icon"><i class="fab fa-adversal fa-3x"></i></div>
-      <div class="col-text"><span>adversal</span></div>
+      <div class="icon-top"><i class="fab fa-adversal fa-3x"></i></div>
+      <div class="icon-text"><span>adversal</span></div>
     </div>
     <div class="col">
-      <div class="col-icon"><i class="fab fa-affiliatetheme fa-3x"></i></div>
-      <div class="col-text"><span>affiliatetheme</span></div>
+      <div class="icon-top"><i class="fab fa-affiliatetheme fa-3x"></i></div>
+      <div class="icon-text"><span>affiliatetheme</span></div>
     </div>
     <div class="col">
-      <div class="col-icon"><i class="fas fa-air-freshener fa-3x"></i></div>
-      <div class="col-text"><span>air-freshener</span></div>
+      <div class="icon-top"><i class="fas fa-air-freshener fa-3x"></i></div>
+      <div class="icon-text"><span>air-freshener</span></div>
     </div>
     <div class="col">
-      <div class="col-icon"><i class="fab fa-airbnb fa-3x"></i></div>
-      <div class="col-text"><span>airbnb</span></div>
+      <div class="icon-top"><i class="fab fa-airbnb fa-3x"></i></div>
+      <div class="icon-text"><span>airbnb</span></div>
     </div>
     <div class="col">
-      <div class="col-icon"><i class="fab fa-algolia fa-3x"></i></div>
-      <div class="col-text"><span>algolia</span></div>
+      <div class="icon-top"><i class="fab fa-algolia fa-3x"></i></div>
+      <div class="icon-text"><span>algolia</span></div>
     </div>
     <div class="col">
-      <div class="col-icon"><i class="fas fa-align-center fa-3x"></i></div>
-      <div class="col-text"><span>align-center</span></div>
+      <div class="icon-top"><i class="fas fa-align-center fa-3x"></i></div>
+      <div class="icon-text"><span>align-center</span></div>
     </div>
     <div class="col">
-      <div class="col-icon"><i class="fas fa-align-justify fa-3x"></i></div>
-      <div class="col-text"><span>align-justify</span></div>
+      <div class="icon-top"><i class="fas fa-align-justify fa-3x"></i></div>
+      <div class="icon-text"><span>align-justify</span></div>
     </div>
     <div class="col">
-      <div class="col-icon"><i class="fas fa-align-left fa-3x"></i></div>
-      <div class="col-text"><span>align-left</span></div>
+      <div class="icon-top"><i class="fas fa-align-left fa-3x"></i></div>
+      <div class="icon-text"><span>align-left</span></div>
+    </div>
+    <div class="col">
+      <div class="icon-top"><i class="fas fa-align-right fa-3x"></i></div>
+      <div class="icon-text"><span>align-right</span></div>
+    </div>
+    <div class="col">
+      <div class="icon-top"><i class="fab fa-alipay fa-3x"></i></div>
+      <div class="icon-text"><span>alipay</span></div>
+    </div>
+    <div class="col">
+      <div class="icon-top"><i class="fas fa-allergies fa-3x"></i></div>
+      <div class="icon-text"><span>allergies</span></div>
+    </div>
+    <div class="col">
+      <div class="icon-top"><i class="fab fa-amazon fa-3x"></i></div>
+      <div class="icon-text"><span>amazon</span></div>
+    </div>
+    <div class="col">
+      <div class="icon-top"><i class="fab fa-amazon-pay fa-3x"></i></div>
+      <div class="icon-text"><span>amazon-pay</span></div>
+    </div>
+    <div class="col">
+      <div class="icon-top"><i class="fas fa-ambulance fa-3x"></i></div>
+      <div class="icon-text"><span>ambulance</span></div>
+    </div>
+    <div class="col">
+      <div class="icon-top"><i class="fab fa-amilia fa-3x"></i></div>
+      <div class="icon-text"><span>amilia</span></div>
+    </div>
+    <div class="col">
+      <div class="icon-top"><i class="fas fa-anchor fa-3x"></i></div>
+      <div class="icon-text"><span>anchor</span></div>
+    </div>
+    <div class="col">
+      <div class="icon-top"><i class="fab fa-android fa-3x"></i></div>
+      <div class="icon-text"><span>android</span></div>
+    </div>
+    <div class="col">
+      <div class="icon-top"><i class="fab fa-angellist fa-3x"></i></div>
+      <div class="icon-text"><span>angellist</span></div>
     </div>
   </section>
 
+  <div>
+    <a id="home-btn" href="../index.html">Home</a>
+  </div>
 </body>
 </html>
