--- a/index.html
+++ b/index.html
@@ -40,12 +40,15 @@
   <!-- Start Marquee Section-->
   <section id="mid_container">
     <p>Today's Topic</p>
-    <a href="data_table/data_table.html">Data Table</a>
+    <a href="icon/icon.html">Icons</a>
   </section>
   <!-- End Marquee Section-->
 
   <!-- Start List Section-->
   <section id="list_container">
+    <div>Practice 9
+      <span><a href="icon/icon.html">Icons</a></span>
+    </div>
     <div>Practice 8
       <span><a href="data_table/data_table.html">Date Table</a></span>
     </div>
