--- a/icon/icon.html
+++ b/icon/icon.html
@@ -10,7 +10,8 @@
   <title>Web Practice | Icons</title>
   <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="icon.css">
-  <script src="https://kit.fontawesome.com/cb2e39f35d.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+  integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 <body>
 
@@ -150,5 +151,6 @@
   <div>
     <a id="home-btn" href="../index.html">Home</a>
   </div>
+
 </body>
 </html>
