--- a/icon/icon.html
+++ b/icon/icon.html
@@ -149,7 +149,7 @@
   </section>
 
   <div>
-    <a id="home-btn" href="../index.html">Home</a>
+    <a id="home-btn" href="../index.html">❮ Home</a>
   </div>
 
 </body>
