--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Web Practice">
@@ -12,7 +11,6 @@
   <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="calculator.css">
 </head>
-
 <body>
 
   <!-- Start Header -->
@@ -25,35 +23,46 @@
   </header>
   <!-- End Header -->
 
-  <div class="calculator">
-    <div>
-      <input class="calculator-display" type="text" value="0" disabled>
+  <div class="container">
+    <div class="calculator">
+      <div class="circle-box">
+        <div>
+          <div class="circle red"></div>
+          <div class="circle yellow"></div>
+          <div class="circle green"></div>
+        </div>
+        <input class="calculator-display" type="text" value="0" disabled>
+      </div>
+      <div class="calculator-key">
+        <button class="operator" type="button" value="ac">C</button>
+        <button class="operator" type="button" value="plus-or-minus">&plusmn;</button>
+        <button class="operator" type="button" value="%">%</button>
+        <button class="operator" type="button" value="/">&divide;</button>
+
+        <button type="button" value="7">7</button>
+        <button type="button" value="8">8</button>
+        <button type="button" value="9">9</button>
+
+        <button type="button" value="4">4</button>
+        <button type="button" value="5">5</button>
+        <button type="button" value="6">6</button>
+
+        <button type="button" value="1">1</button>
+        <button type="button" value="2">2</button>
+        <button type="button" value="3">3</button>
+
+        <button type="button" value="0">0</button>
+        <button type="button" value=".">.</button>
+        <button class="equal" type="button" value="=">=</button>
+
+        <button class="multiplication operator" type="button" value="*">&times;</button>
+        <button class="subtraction operator" type="button" value="-">-</button>
+        <button class="addition operator" type="button" value="+">+</button>
+      </div>
     </div>
-    <div class="calculator-key">
-      <button class="operator" type="button" value="ac">C</button>
-      <button class="operator" type="button" value="plus-or-minus">&plusmn;</button>
-      <button class="operator" type="button" value="%">%</button>
-      <button class="operator" type="button" value="/">&divide;</button>
 
-      <button type="button" value="7">7</button>
-      <button type="button" value="8">8</button>
-      <button type="button" value="9">9</button>
-
-      <button type="button" value="4">4</button>
-      <button type="button" value="5">5</button>
-      <button type="button" value="6">6</button>
-
-      <button type="button" value="1">1</button>
-      <button type="button" value="2">2</button>
-      <button type="button" value="3">3</button>
-
-      <button type="button" value="0">0</button>
-      <button type="button" value=".">.</button>
-      <button class="equal" type="button" value="=">=</button>
-
-      <button class="multiplication operator" type="button" value="*">&times;</button>
-      <button class="subtraction operator" type="button" value="-">-</button>
-      <button class="addition operator" type="button" value="+">+</button>
+    <div class="home-btn">
+      <a id="home-btn" href="../index.html">❮ Home</a>
     </div>
   </div>
 
