--- a/index.html
+++ b/index.html
@@ -40,12 +40,15 @@
   <!-- Start Marquee Section-->
   <section id="mid_container">
     <p>Today's Topic</p>
-    <a href="calculator/calculator.html">Calculator</a>
+    <a href="login_page/login_page.html">Login Page</a>
   </section>
   <!-- End Marquee Section-->
 
   <!-- Start List Section-->
   <section id="list_container">
+    <div>Practice 11
+      <span><a href="login_page/login_page.html">Login Page</a></span>
+    </div>
     <div>Practice 10
       <span><a href="calculator/calculator.html">Calculator</a></span>
     </div>
