edit login html title

--- a/login_page/login_page.html
+++ b/login_page/login_page.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Jess Wu">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Web Practice | Icons</title>
+  <title>Web Practice | Login Page</title>
   <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="login_page.css">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
