--- a/login_page/login_page.html
+++ b/login_page/login_page.html
@@ -37,10 +37,14 @@
         <div class="tab-panels">
           <section id="signin" class="tab-panel">
             <form>
-              <label>Username or email</label>
-              <input type="text" title="This field is required.">
-              <label>Password</label>
-              <input type="password" title="This field is required.">
+              <div class="input-icon">
+                <label>Username or email</label>
+                <input type="text" title="This field is required." placeholder="&#xf406">
+              </div>
+              <div class="input-icon">
+                <label>Password</label>
+                <input type="password" title="This field is required." placeholder="&#xf023">
+              </div>
               <div style="margin: 20px 0;">
                 <div class="forgot">
                   <input type="checkbox" id="check-remember">
