modify form input icon

--- a/login_page/login_page.html
+++ b/login_page/login_page.html
@@ -37,13 +37,16 @@
         <div class="tab-panels">
           <section id="signin" class="tab-panel">
             <form>
-              <div class="input-icon">
-                <label>Username or email</label>
-                <input type="text" title="This field is required." placeholder="&#xf406">
+              <label>Username or email</label>
+              <div class="username-icons">
+                <!-- <input class="fas" type="text" title="This field is required." placeholder="&#xf007"> -->
+                <input type="text" title="This field is required.">
+                <span class="username-icon"><i class="fas fa-user"></i></span>
               </div>
-              <div class="input-icon">
-                <label>Password</label>
-                <input type="password" title="This field is required." placeholder="&#xf023">
+              <label>Password</label>
+              <div class="password-icons">
+                <input type="password" title="This field is required.">
+                <span class="password-icon"><i class="fas fa-lock"></i></span>
               </div>
               <div style="margin: 20px 0;">
                 <div class="forgot">
