edit coding style

--- a/wizard_page/wizard_page.html
+++ b/wizard_page/wizard_page.html
@@ -8,22 +8,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Web Practice | Wizard Page</title>
+  <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="wizard_page.css">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 <body>
 
   <!-- Start Header -->
   <header>
     <nav>
-      <a href=".. /index.html">Home</a>
+      <a href="../index.html">Home</a>
       <a href="mailto:jiayu1551@gmail.com">Contact</a>
-      <a href="https: //github.com/jesswu1551">GitHub</a>
+      <a href="https://github.com/jesswu1551">GitHub</a>
     </nav>
   </header>
   <!-- End Header -->
-
 
   <div class="wizard-content">
     <ul class="tab-items">
