--- a/bootstrap_showcase/bootstrap_index.html
+++ b/bootstrap_showcase/bootstrap_index.html
@@ -9,9 +9,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Web Practice | Bootstrap</title>
   <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="bootstrap_showcase.css">
-  <link rel="stylesheet" href="../../bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="bootstrap.min.css">
+  <link rel="stylesheet" href="bootstrap_index.css">
   <script src="jquery-3.4.1.min.js"></script>
   <script src="bootstrap.min.js"></script>
 </head>
@@ -29,21 +28,24 @@
 
   <div class="container-fluid">
     <div class="row mt-4 mb-4">
-      <div class="col-2">
+      <div class="col-2 bd-sidebar">
         <ul class="nav flex-column">
           <div>Components</div>
           <li class="nav-item active">
             <a class="nav-link" href="#">Alerts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Badge</a>
+            <a class="nav-link" href="badge.html">Badge</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Breadcrumb</a>
+            <a class="nav-link" href="breadcrumb.html">Breadcrumb</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="button.html">Button</a>
           </li>
         </ul>
       </div>
-      <div class="col-10">
+      <div class="col-8">
         <h1>Alerts</h1>
         <h3 class="mb-4 font-weight-normal">Examples</h3>
         <div class="alert alert-primary" role="alert">A simple primary alert—check it out!</div>
@@ -80,7 +82,7 @@
           </button>
         </div>
       </div>
-      <div class="col-4"></div>
+      <div class="col-2"></div>
     </div>
   </div>
 </body>
