--- a/bootstrap_showcase/template.html
+++ b/bootstrap_showcase/template.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Web Practice">
@@ -7,8 +8,7 @@
   <meta name="author" content="Jess Wu">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Web Practice | Bootstrap Breadcrumb</title>
-  <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
+  <title>Web Practice | Bootstrap </title>
   <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap_index.css">
@@ -16,6 +16,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/popper.js"></script>
 </head>
+
 <body>
 
   <!-- Start Header -->
@@ -39,7 +40,7 @@
           <li class="nav-item">
             <a class="nav-link" href="badge.html">Badge</a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="breadcrumb.html">Breadcrumb</a>
           </li>
           <li class="nav-item">
@@ -108,30 +109,22 @@
         </ul>
       </div>
       <div class="col-8">
-        <h1>Breadcrumb</h1>
+        <h1>Button</h1>
         <div class="bd-example">
           <h3 class="font-weight-normal">Examples</h3>
-          <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item active" aria-current="page">Home</li>
-            </ol>
-          </nav>
-
-          <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Library</li>
-            </ol>
-          </nav>
-
-          <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item"><a href="#">Library</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Data</li>
-            </ol>
-          </nav>
+          <button type="button" class="btn btn-primary">Pirmary</button>
+          <button type="button" class="btn btn-secondary">Secondary</button>
+          <button type="button" class="btn btn-success">Success</button>
+          <button type="button" class="btn btn-danger">Danger</button>
+          <button type="button" class="btn btn-warning">Warning</button>
+          <button type="button" class="btn btn-info">Info</button>
+          <button type="button" class="btn btn-light">Light</button>
+          <button type="button" class="btn btn-dark">Dark</button>
+          <button type="button" class="btn btn-link">Link</button>
         </div>
+
+
+
 
       </div>
       <div class="col-2"></div>
@@ -139,4 +132,5 @@
   </div>
 
 </body>
+
 </html>
