--- a/bootstrap_showcase/badge.html
+++ b/bootstrap_showcase/badge.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Web Practice">
@@ -10,12 +9,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Web Practice | Bootstrap Badge</title>
   <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="bootstrap.min.css">
-  <link rel="stylesheet" href="bootstrap_index.css">
-  <script src="jquery-3.4.1.min.js"></script>
-  <script src="bootstrap.min.js"></script>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap_index.css">
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/popper.js"></script>
 </head>
-
 <body>
 
   <!-- Start Header -->
@@ -26,13 +25,12 @@
       <a href="https://github.com/jesswu1551">GitHub</a>
     </nav>
   </header>
-  <!-- End Header -->
 
   <div class="container-fluid">
     <div class="row mt-4 mb-4">
       <div class="col-2 bd-sidebar">
         <ul class="nav flex-column">
-          <div>Components</div>
+          <div class="bd-toc">Components</div>
           <li class="nav-item">
             <a class="nav-link" href="bootstrap_index.html">Alerts</a>
           </li>
@@ -45,19 +43,81 @@
           <li class="nav-item">
             <a class="nav-link" href="button.html">Button</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="button_group.html">Button group</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="card.html">Card</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="carousel.html">Carousel</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="collapse.html">Collapse</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="dropdown.html">Dropdown</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="form.html">Form</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="input_group.html">Input group</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="jumbotron.html">Jumbotron</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="list_group.html">List group</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="media_object.html">Media object</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="modal.html">Modal</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="navs.html">Navs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="navbar.html">Navbar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="pagination.html">Pagination</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="popover.html">Popover</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="progress.html">Progress</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="scrollspy.html">Scrollspy</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="spinner.html">Spinner</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="toast.html">Toast</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="tooltip.html">Tooltip</a>
+          </li>
         </ul>
       </div>
       <div class="col-8">
         <h1>Badges</h1>
-        <h3 class="mb-4 font-weight-normal">Examples</h3>
-        <h1>Example heading <span class="badge badge-secondary">New</span></h1>
-        <h2>Example heading <span class="badge badge-secondary">New</span></h2>
-        <h3>Example heading <span class="badge badge-secondary">New</span></h3>
-        <h4>Example heading <span class="badge badge-secondary">New</span></h4>
-        <h5>Example heading <span class="badge badge-secondary">New</span></h5>
-        <h6>Example heading <span class="badge badge-secondary">New</span></h6>
+        <div class="bd-example">
+          <h3 class="font-weight-normal">Examples</h3>
+          <h1>Example heading <span class="badge badge-secondary">New</span></h1>
+          <h2>Example heading <span class="badge badge-secondary">New</span></h2>
+          <h3>Example heading <span class="badge badge-secondary">New</span></h3>
+          <h4>Example heading <span class="badge badge-secondary">New</span></h4>
+          <h5>Example heading <span class="badge badge-secondary">New</span></h5>
+          <h6>Example heading <span class="badge badge-secondary">New</span></h6>
+        </div>
 
-        <div class="mt-4 mb-4">
+        <div class="bd-example">
           <button type="button" class="btn btn-primary">
             Notifications <span class="badge badge-light">4</span>
           </button>
@@ -66,35 +126,42 @@
             <span class="sr-only">unread messages</span>
           </button>
         </div>
-        <h3 class="mt-4 mb-4 font-weight-normal">Contextual variations</h3>
-        <span class="badge badge-primary">Primary</span>
-        <span class="badge badge-secondary">Secondary</span>
-        <span class="badge badge-success">Success</span>
-        <span class="badge badge-danger">Danger</span>
-        <span class="badge badge-warning">Warning</span>
-        <span class="badge badge-info">Info</span>
-        <span class="badge badge-light">Light</span>
-        <span class="badge badge-dark">Dark</span>
 
-        <h3 class="mt-4 mb-4 font-weight-normal">Pill badges</h3>
-        <span class="badge badge-pill badge-primary">Primary</span>
-        <span class="badge badge-pill badge-secondary">Secondary</span>
-        <span class="badge badge-pill badge-success">Success</span>
-        <span class="badge badge-pill badge-danger">Danger</span>
-        <span class="badge badge-pill badge-warning">Warning</span>
-        <span class="badge badge-pill badge-info">Info</span>
-        <span class="badge badge-pill badge-light">Light</span>
-        <span class="badge badge-pill badge-dark">Dark</span>
+        <div class="bd-example">
+          <h3 class="font-weight-normal">Contextual variations</h3>
+          <span class="badge badge-primary">Primary</span>
+          <span class="badge badge-secondary">Secondary</span>
+          <span class="badge badge-success">Success</span>
+          <span class="badge badge-danger">Danger</span>
+          <span class="badge badge-warning">Warning</span>
+          <span class="badge badge-info">Info</span>
+          <span class="badge badge-light">Light</span>
+          <span class="badge badge-dark">Dark</span>
+        </div>
 
-        <h3 class="mt-4 mb-4 font-weight-normal">Links</h3>
-        <a href="#" class="badge badge-primary">Primary</a>
-        <a href="#" class="badge badge-secondary">Secondary</a>
-        <a href="#" class="badge badge-success">Success</a>
-        <a href="#" class="badge badge-danger">Danger</a>
-        <a href="#" class="badge badge-warning">Warning</a>
-        <a href="#" class="badge badge-info">Info</a>
-        <a href="#" class="badge badge-light">Light</a>
-        <a href="#" class="badge badge-dark">Dark</a>
+        <div class="bd-example">
+          <h3 class="font-weight-normal">Pill badges</h3>
+          <span class="badge badge-pill badge-primary">Primary</span>
+          <span class="badge badge-pill badge-secondary">Secondary</span>
+          <span class="badge badge-pill badge-success">Success</span>
+          <span class="badge badge-pill badge-danger">Danger</span>
+          <span class="badge badge-pill badge-warning">Warning</span>
+          <span class="badge badge-pill badge-info">Info</span>
+          <span class="badge badge-pill badge-light">Light</span>
+          <span class="badge badge-pill badge-dark">Dark</span>
+        </div>
+
+        <div class="bd-example">
+          <h3 class="font-weight-normal">Links</h3>
+          <a href="#" class="badge badge-primary">Primary</a>
+          <a href="#" class="badge badge-secondary">Secondary</a>
+          <a href="#" class="badge badge-success">Success</a>
+          <a href="#" class="badge badge-danger">Danger</a>
+          <a href="#" class="badge badge-warning">Warning</a>
+          <a href="#" class="badge badge-info">Info</a>
+          <a href="#" class="badge badge-light">Light</a>
+          <a href="#" class="badge badge-dark">Dark</a>
+        </div>
 
       </div>
       <div class="col-2"></div>
