--- a/bootstrap_showcase/bootstrap_index.html
+++ b/bootstrap_showcase/bootstrap_index.html
@@ -9,10 +9,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Web Practice | Bootstrap</title>
   <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="bootstrap.min.css">
-  <link rel="stylesheet" href="bootstrap_index.css">
-  <script src="jquery-3.4.1.min.js"></script>
-  <script src="bootstrap.min.js"></script>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap_index.css">
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/popper.js"></script>
 </head>
 <body>
 
@@ -30,9 +31,9 @@
     <div class="row mt-4 mb-4">
       <div class="col-2 bd-sidebar">
         <ul class="nav flex-column">
-          <div>Components</div>
+          <div class="bd-toc">Components</div>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Alerts</a>
+            <a class="nav-link" href="bootstrap_index.html">Alerts</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="badge.html">Badge</a>
@@ -43,44 +44,110 @@
           <li class="nav-item">
             <a class="nav-link" href="button.html">Button</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="button_group.html">Button group</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="card.html">Card</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="carousel.html">Carousel</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="collapse.html">Collapse</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="dropdown.html">Dropdown</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="form.html">Form</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="input_group.html">Input group</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="jumbotron.html">Jumbotron</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="list_group.html">List group</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="media_object.html">Media object</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="modal.html">Modal</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="navs.html">Navs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="navbar.html">Navbar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="pagination.html">Pagination</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="popover.html">Popover</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="progress.html">Progress</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="scrollspy.html">Scrollspy</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="spinner.html">Spinner</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="toast.html">Toast</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="tooltip.html">Tooltip</a>
+          </li>
         </ul>
       </div>
       <div class="col-8">
         <h1>Alerts</h1>
-        <h3 class="mb-4 font-weight-normal">Examples</h3>
-        <div class="alert alert-primary" role="alert">A simple primary alert—check it out!</div>
-        <div class="alert alert-secondary" role="alert">A simple secondary alert—check it out!</div>
-        <div class="alert alert-success" role="alert">A simple success alert—check it out!</div>
-        <div class="alert alert-danger" role="alert">A simple danger alert—check it out!</div>
-        <div class="alert alert-warning" role="alert">A simple warning alert—check it out!</div>
-        <div class="alert alert-info" role="alert">A simple info alert—check it out!</div>
-        <div class="alert alert-light" role="alert">A simple light alert—check it out!</div>
-        <div class="alert alert-dark" role="alert">A simple dark alert—check it out!</div>
-
-        <h3 class="mt-4 mb-4 font-weight-normal">Link Color</h3>
-        <div class="alert alert-primary" role="alert">A simple primary with <a link="#" class="alert-link">an example link</a>. Give it a click if you like.</div>
-        <div class="alert alert-secondary" role="alert">A simple secondary with <a link="#" class="alert-link">an example link</a>. Give it a click if you like.</div>
-        <div class="alert alert-success" role="alert">A simple success with <a link="#" class="alert-link">an example link</a>. Give it a click if you like.</div>
-        <div class="alert alert-danger" role="alert">A simple danger with <a link="#" class="alert-link">an example link</a>. Give it a click if you like.</div>
-        <div class="alert alert-warning" role="alert">A simple warning with <a link="#" class="alert-link">an example link</a>. Give it a click if you like.</div>
-        <div class="alert alert-info" role="alert">A simple info with <a link="#" class="alert-link">an example link</a>. Give it a click if you like.</div>
-        <div class="alert alert-light" role="alert">A simple light with <a link="#" class="alert-link">an example link</a>. Give it a click if you like.</div>
-        <div class="alert alert-dark" role="alert">A simple dark with <a link="#" class="alert-link">an example link</a>. Give it a click if you like.</div>
-
-        <h3 class="mt-4 mb-4 font-weight-normal">Additional content</h3>
-        <div class="alert alert-success" role="alert">
-          <h4 class="alert-heading">Well done!</h4>
-          <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so that you
-          can see how spacing within an alert works with this kind of content.</p>
-          <hr>
-          <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
+        <div class="bd-example">
+          <h3 class="font-weight-normal">Examples</h3>
+          <div class="alert alert-primary" role="alert">A simple primary alert—check it out!</div>
+          <div class="alert alert-secondary" role="alert">A simple secondary alert—check it out!</div>
+          <div class="alert alert-success" role="alert">A simple success alert—check it out!</div>
+          <div class="alert alert-danger" role="alert">A simple danger alert—check it out!</div>
+          <div class="alert alert-warning" role="alert">A simple warning alert—check it out!</div>
+          <div class="alert alert-info" role="alert">A simple info alert—check it out!</div>
+          <div class="alert alert-light" role="alert">A simple light alert—check it out!</div>
+          <div class="alert alert-dark" role="alert">A simple dark alert—check it out!</div>
         </div>
-        <div class="alert alert-warning alert-dismissible fade show" role="alert">
-          <strong>Holy guacamole!</strong> You should check in on some of those fields below.
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+        <div class="bd-example">
+          <h3 class="font-weight-normal">Link Color</h3>
+          <div class="alert alert-primary" role="alert">A simple primary with <a link="#" class="alert-link">an example link</a>. Give it a click if you like.</div>
+          <div class="alert alert-secondary" role="alert">A simple secondary with <a link="#" class="alert-link">an example link</a>. Give it a click if you like.</div>
+          <div class="alert alert-success" role="alert">A simple success with <a link="#" class="alert-link">an example link</a>. Give it a click if you like.</div>
+          <div class="alert alert-danger" role="alert">A simple danger with <a link="#" class="alert-link">an example link</a>. Give it a click if you like.</div>
+          <div class="alert alert-warning" role="alert">A simple warning with <a link="#" class="alert-link">an example link</a>. Give it a click if you like.</div>
+          <div class="alert alert-info" role="alert">A simple info with <a link="#" class="alert-link">an example link</a>. Give it a click if you like.</div>
+          <div class="alert alert-light" role="alert">A simple light with <a link="#" class="alert-link">an example link</a>. Give it a click if you like.</div>
+          <div class="alert alert-dark" role="alert">A simple dark with <a link="#" class="alert-link">an example link</a>. Give it a click if you like.</div>
         </div>
+        <div class="bd-example">
+          <h3 class="font-weight-normal">Additional content</h3>
+          <div class="alert alert-success" role="alert">
+            <h4 class="alert-heading">Well done!</h4>
+            <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so
+              that you
+              can see how spacing within an alert works with this kind of content.</p>
+            <hr>
+            <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
+          </div>
+          <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+        </div>
+
       </div>
       <div class="col-2"></div>
     </div>
