--- a/bootstrap_showcase/button.html
+++ b/bootstrap_showcase/button.html
@@ -9,10 +9,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Web Practice | Bootstrap Button</title>
   <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="bootstrap.min.css">
-  <link rel="stylesheet" href="bootstrap_index.css">
-  <script src="jquery-3.4.1.min.js"></script>
-  <script src="bootstrap.min.js"></script>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap_index.css">
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/popper.js"></script>
 </head>
 <body>
 
@@ -30,7 +31,7 @@
     <div class="row mt-4 mb-4">
       <div class="col-2 bd-sidebar">
         <ul class="nav flex-column">
-          <div>Components</div>
+          <div class="bd-toc">Components</div>
           <li class="nav-item">
             <a class="nav-link" href="bootstrap_index.html">Alerts</a>
           </li>
@@ -43,82 +44,156 @@
           <li class="nav-item active">
             <a class="nav-link" href="button.html">Button</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="button_group.html">Button group</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="card.html">Card</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="carousel.html">Carousel</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="collapse.html">Collapse</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="dropdown.html">Dropdown</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="form.html">Form</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="input_group.html">Input group</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="jumbotron.html">Jumbotron</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="list_group.html">List group</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="media_object.html">Media object</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="modal.html">Modal</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="navs.html">Navs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="navbar.html">Navbar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="pagination.html">Pagination</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="popover.html">Popover</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="progress.html">Progress</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="scrollspy.html">Scrollspy</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="spinner.html">Spinner</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="toast.html">Toast</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="tooltip.html">Tooltip</a>
+          </li>
         </ul>
       </div>
       <div class="col-8">
         <h1>Button</h1>
-        <h3 class="mb-4 font-weight-normal">Examples</h3>
-        <button type="button" class="btn btn-primary">Pirmary</button>
-        <button type="button" class="btn btn-secondary">Secondary</button>
-        <button type="button" class="btn btn-success">Success</button>
-        <button type="button" class="btn btn-danger">Danger</button>
-        <button type="button" class="btn btn-warning">Warning</button>
-        <button type="button" class="btn btn-info">Info</button>
-        <button type="button" class="btn btn-light">Light</button>
-        <button type="button" class="btn btn-dark">Dark</button>
-        <button type="button" class="btn btn-link">Link</button>
-
-        <h3 class="mt-4 mb-4 font-weight-normal">Button tags</h3>
-        <a class="btn btn-primary" href="#" role="button">Link</a>
-        <button class="btn btn-primary" type="submit">Button</button>
-        <input class="btn btn-primary" type="button" value="Input">
-        <input class="btn btn-primary" type="submit" value="Submit">
-        <input class="btn btn-primary" type="reset" value="Reset">
-
-        <h3 class="mt-4 mb-4 font-weight-normal">Outline button</h3>
-        <button type="button" class="btn btn-outline-primary">Primary</button>
-        <button type="button" class="btn btn-outline-secondary">Secondary</button>
-        <button type="button" class="btn btn-outline-success">Success</button>
-        <button type="button" class="btn btn-outline-danger">Danger</button>
-        <button type="button" class="btn btn-outline-warning">Warning</button>
-        <button type="button" class="btn btn-outline-info">Info</button>
-        <button type="button" class="btn btn-outline-light">Light</button>
-        <button type="button" class="btn btn-outline-dark">Dark</button>
-
-        <h3 class="mt-4 mb-4 font-weight-normal">Size</h3>
-        <div>
-          <button type="button" class="btn btn-primary btn-lg">Large button</button>
-          <button type="button" class="btn btn-secondary btn-lg">Large button</button>
-        </div>
-        <div class="mt-4">
-          <button type="button" class="btn btn-primary btn-sm">Small button</button>
-          <button type="button" class="btn btn-secondary btn-sm">Small button</button>
-        </div>
-        <div class="mt-4">
-          <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
-          <button type="button" class="btn btn-secondary btn-lg btn-block">Block level button</button>
+        <div class="bd-example">
+          <h3 class="font-weight-normal">Examples</h3>
+          <button type="button" class="btn btn-primary">Pirmary</button>
+          <button type="button" class="btn btn-secondary">Secondary</button>
+          <button type="button" class="btn btn-success">Success</button>
+          <button type="button" class="btn btn-danger">Danger</button>
+          <button type="button" class="btn btn-warning">Warning</button>
+          <button type="button" class="btn btn-info">Info</button>
+          <button type="button" class="btn btn-light">Light</button>
+          <button type="button" class="btn btn-dark">Dark</button>
+          <button type="button" class="btn btn-link">Link</button>
         </div>
 
-        <h3 class="mt-4 mb-4 font-weight-normal">Active state</h3>
-        <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Primary link</a>
-        <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Link</a>
-
-        <h3 class="mt-4 mb-4 font-weight-normal">Disabled state</h3>
-        <div class="mt-4">
-          <button type="button" class="btn btn-lg btn-primary" disabled>Primary button</button>
-          <button type="button" class="btn btn-secondary btn-lg" disabled>Button</button>
-        </div>
-        <div class="mt-4">
-          <a href="#" class="btn btn-primary btn-lg disabled" tabindex="-1" role="button" aria-disabled="true">Primary link</a>
-          <a href="#" class="btn btn-secondary btn-lg disabled" tabindex="-1" role="button" aria-disabled="true">Link</a>
+        <div class="bd-example">
+          <h3 class="font-weight-normal">Button tags</h3>
+          <a class="btn btn-primary" href="#" role="button">Link</a>
+          <button class="btn btn-primary" type="submit">Button</button>
+          <input class="btn btn-primary" type="button" value="Input">
+          <input class="btn btn-primary" type="submit" value="Submit">
+          <input class="btn btn-primary" type="reset" value="Reset">
         </div>
 
-        <h3 class="mt-4 mb-4 font-weight-normal">Checkbox and radio button</h3>
-        <div class="btn-group-toggle mt-4 mb-4" data-toggle="buttons">
-          <label class="btn btn-secondary active">
-            <input type="checkbox" checked> Checked
-          </label>
+        <div class="bd-example">
+          <h3 class="font-weight-normal">Outline button</h3>
+          <button type="button" class="btn btn-outline-primary">Primary</button>
+          <button type="button" class="btn btn-outline-secondary">Secondary</button>
+          <button type="button" class="btn btn-outline-success">Success</button>
+          <button type="button" class="btn btn-outline-danger">Danger</button>
+          <button type="button" class="btn btn-outline-warning">Warning</button>
+          <button type="button" class="btn btn-outline-info">Info</button>
+          <button type="button" class="btn btn-outline-light">Light</button>
+          <button type="button" class="btn btn-outline-dark">Dark</button>
         </div>
-        <div class="btn-group btn-group-toggle" data-toggle="buttons">
-          <label class="btn btn-secondary active">
-            <input type="radio" name="options" id="option1" checked> Active
-          </label>
-          <label class="btn btn-secondary">
-            <input type="radio" name="options" id="option2"> Radio
-          </label>
-          <label class="btn btn-secondary">
-            <input type="radio" name="options" id="option3"> Radio
-          </label>
+
+        <div class="bd-example">
+          <h3 class="font-weight-normal">Size</h3>
+          <div>
+            <button type="button" class="btn btn-primary btn-lg">Large button</button>
+            <button type="button" class="btn btn-secondary btn-lg">Large button</button>
+          </div>
+          <div class="mt-2">
+            <button type="button" class="btn btn-primary btn-sm">Small button</button>
+            <button type="button" class="btn btn-secondary btn-sm">Small button</button>
+          </div>
+          <div class="mt-2">
+            <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-secondary btn-lg btn-block">Block level button</button>
+          </div>
+        </div>
+
+        <div class="bd-example">
+          <h3 class="font-weight-normal">Active state</h3>
+          <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Primary link</a>
+          <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Link</a>
+        </div>
+
+        <div class="bd-example">
+          <h3 class="font-weight-normal">Disabled state</h3>
+          <div class="mt-2">
+            <button type="button" class="btn btn-lg btn-primary" disabled>Primary button</button>
+            <button type="button" class="btn btn-secondary btn-lg" disabled>Button</button>
+          </div>
+          <div class="mt-2">
+            <a href="#" class="btn btn-primary btn-lg disabled" tabindex="-1" role="button" aria-disabled="true">Primary link</a>
+            <a href="#" class="btn btn-secondary btn-lg disabled" tabindex="-1" role="button" aria-disabled="true">Link</a>
+          </div>
+        </div>
+
+        <div class="bd-example">
+          <h3 class="font-weight-normal">Checkbox and radio button</h3>
+          <div class="btn-group-toggle" data-toggle="buttons">
+            <label class="btn btn-secondary active">
+              <input type="checkbox" checked> Checked
+            </label>
+          </div>
+          <div class="btn-group btn-group-toggle mt-2" data-toggle="buttons">
+            <label class="btn btn-secondary active">
+              <input type="radio" name="options" id="option1" checked> Active
+            </label>
+            <label class="btn btn-secondary">
+              <input type="radio" name="options" id="option2"> Radio
+            </label>
+            <label class="btn btn-secondary">
+              <input type="radio" name="options" id="option3"> Radio
+            </label>
+          </div>
         </div>
 
       </div>
