--- a/bootstrap_showcase/carousel.html
+++ b/bootstrap_showcase/carousel.html
@@ -7,8 +7,7 @@
   <meta name="author" content="Jess Wu">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Web Practice | Bootstrap Breadcrumb</title>
-  <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
+  <title>Web Practice | Bootstrap Carousel</title>
   <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap_index.css">
@@ -26,7 +25,6 @@
       <a href="https://github.com/jesswu1551">GitHub</a>
     </nav>
   </header>
-  <!-- End Header -->
 
   <div class="container-fluid">
     <div class="row mt-4 mb-4">
@@ -39,7 +37,7 @@
           <li class="nav-item">
             <a class="nav-link" href="badge.html">Badge</a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="breadcrumb.html">Breadcrumb</a>
           </li>
           <li class="nav-item">
@@ -51,7 +49,7 @@
           <li class="nav-item">
             <a class="nav-link" href="card.html">Card</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="carousel.html">Carousel</a>
           </li>
           <li class="nav-item">
@@ -107,33 +105,80 @@
           </li>
         </ul>
       </div>
+
       <div class="col-8">
-        <h1>Breadcrumb</h1>
+        <h1>Carousel</h1>
+
         <div class="bd-example">
           <h3 class="font-weight-normal">Examples</h3>
-          <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item active" aria-current="page">Home</li>
+          <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
             </ol>
-          </nav>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="..." height="400" width="800" style="background-color:rgb(134, 142, 150)" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>First slide label</h5>
+                  <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="..." height="400" width="800" style="background-color:rgb(134, 142, 150)" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Second slide label</h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="..." height="400" width="800" style="background-color:rgb(134, 142, 150)" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Third slide label</h5>
+                  <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
 
-          <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Library</li>
-            </ol>
-          </nav>
-
-          <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item"><a href="#">Library</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Data</li>
-            </ol>
-          </nav>
+        <!-- add .carousel-fade to animate slides -->
+        <div class="bd-example">
+          <h3 class="font-weight-normal">Crossfade</h3>
+          <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="..." height="400" width="800" style="background-color:#777" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="..." height="400" width="800" style="background-color:#555" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="..." height="400" width="800" style="background-color:#333" alt="...">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
         </div>
 
       </div>
+
       <div class="col-2"></div>
     </div>
   </div>
