--- a/bootstrap_showcase/jumbotron.html
+++ b/bootstrap_showcase/jumbotron.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Jess Wu">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Web Practice | Bootstrap </title>
+  <title>Web Practice | Bootstrap Jumbotron</title>
   <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap_index.css">
@@ -63,7 +63,7 @@
           <li class="nav-item">
             <a class="nav-link" href="input_group.html">Input group</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="jumbotron.html">Jumbotron</a>
           </li>
           <li class="nav-item">
@@ -106,40 +106,30 @@
       </div>
 
       <div class="col-8">
-        <h1>Button</h1>
+        <h1>Jumbotron</h1>
 
         <div class="bd-example">
           <h3 class="font-weight-normal">Examples</h3>
+          <div class="jumbotron">
+            <h1 class="display-4">Hello, world!</h1>
+            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or
+            information.</p>
+            <hr class="my-4">
+            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+          </div>
         </div>
 
         <div class="bd-example">
-          <h3 class="font-weight-normal">Examples</h3>
+          <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+              <h1 class="display-4">Hello, world!</h1>
+              <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured
+                content or
+                information.</p>
+            </div>
+          </div>
         </div>
-
-        <div class="bd-example">
-          <h3 class="font-weight-normal">Examples</h3>
-        </div>
-
-        <div class="bd-example">
-          <h3 class="font-weight-normal">Examples</h3>
-        </div>
-
-        <div class="bd-example">
-          <h3 class="font-weight-normal">Examples</h3>
-        </div>
-
-        <div class="bd-example">
-          <h3 class="font-weight-normal">Examples</h3>
-        </div>
-
-        <div class="bd-example">
-          <h3 class="font-weight-normal">Examples</h3>
-        </div>
-
-        <div class="bd-example">
-          <h3 class="font-weight-normal">Examples</h3>
-        </div>
-
 
       </div>
 
